src/main/java/io/github/yeyuhl/database/cli/parser/RookieParser.java
/* RookieParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. RookieParser.java */
package io.github.yeyuhl.database.cli.parser;

@SuppressWarnings("all")
public class RookieParser/*@bgen(jjtree)*/implements RookieParserTreeConstants, RookieParserConstants {/*@bgen(jjtree)*/
  protected JJTRookieParserState jjtree = new JJTRookieParserState();

  final public ASTSQLStatementList sql_stmt_list() throws ParseException {/*@bgen(jjtree) SQLStatementList */
  ASTSQLStatementList jjtn000 = new ASTSQLStatementList(JJTSQLSTATEMENTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SCOL:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(SCOL);
      }
      sql_stmt();
      label_2:
      while (true) {
        jj_consume_token(SCOL);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SCOL:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case K_WITH:
        case K_DELETE:
        case K_INSERT:
        case K_UPDATE:
        case K_SELECT:
        case K_CREATE:
        case K_DROP:
        case K_BEGIN:
        case K_END:
        case K_COMMIT:
        case K_SAVEPOINT:
        case K_ROLLBACK:
        case K_RELEASE:
        case K_EXPLAIN:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        sql_stmt();
        label_4:
        while (true) {
          jj_consume_token(SCOL);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case SCOL:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_4;
          }
        }
      }
jjtree.closeNodeScope(jjtn000, true);
                                                             jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
}

  final public void sql_stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case K_WITH:
    case K_SELECT:{
      select_stmt();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_1(2)) {
        create_table_stmt();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case K_CREATE:{
          create_index_stmt();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          if (jj_2_2(2)) {
            drop_table_stmt();
          } else {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case K_DROP:{
              drop_index_stmt();
              break;
              }
            case K_INSERT:{
              insert_stmt();
              break;
              }
            case K_DELETE:{
              delete_stmt();
              break;
              }
            case K_UPDATE:{
              update_stmt();
              break;
              }
            case K_BEGIN:{
              begin_stmt();
              break;
              }
            case K_END:
            case K_COMMIT:{
              commit_stmt();
              break;
              }
            case K_ROLLBACK:{
              rollback_stmt();
              break;
              }
            case K_SAVEPOINT:{
              savepoint_stmt();
              break;
              }
            case K_RELEASE:{
              release_stmt();
              break;
              }
            case K_EXPLAIN:{
              explain_stmt();
              break;
              }
            default:
              jj_la1[6] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
}

  final public ASTExecutableStatement executable_stmt() throws ParseException {/*@bgen(jjtree) ExecutableStatement */
  ASTExecutableStatement jjtn000 = new ASTExecutableStatement(JJTEXECUTABLESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_WITH:
      case K_SELECT:{
        select_stmt();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        if (jj_2_3(2)) {
          create_table_stmt();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case K_CREATE:{
            create_index_stmt();
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            if (jj_2_4(2)) {
              drop_table_stmt();
            } else {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case K_DROP:{
                drop_index_stmt();
                break;
                }
              case K_INSERT:{
                insert_stmt();
                break;
                }
              case K_DELETE:{
                delete_stmt();
                break;
                }
              case K_UPDATE:{
                update_stmt();
                break;
                }
              case K_END:
              case K_COMMIT:{
                commit_stmt();
                break;
                }
              case K_ROLLBACK:{
                rollback_stmt();
                break;
                }
              case K_SAVEPOINT:{
                savepoint_stmt();
                break;
                }
              case K_RELEASE:{
                release_stmt();
                break;
                }
              case K_EXPLAIN:{
                explain_stmt();
                break;
                }
              default:
                jj_la1[9] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SCOL:{
        jj_consume_token(SCOL);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        ;
      }
jjtree.closeNodeScope(jjtn000, true);
                                    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
           jjtree.clearNodeScope(jjtn000);
           jjtc000 = false;
         } else {
           jjtree.popNode();
         }
         if (jjte000 instanceof RuntimeException) {
           {if (true) throw (RuntimeException)jjte000;}
         }
         if (jjte000 instanceof ParseException) {
           {if (true) throw (ParseException)jjte000;}
         }
         {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
           jjtree.closeNodeScope(jjtn000, true);
         }
    }
    throw new Error("Missing return statement in function");
}

  final public void explain_stmt() throws ParseException {/*@bgen(jjtree) ExplainStatement */
  ASTExplainStatement jjtn000 = new ASTExplainStatement(JJTEXPLAINSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_EXPLAIN);
      select_stmt();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void drop_table_stmt() throws ParseException {/*@bgen(jjtree) DropTableStatement */
  ASTDropTableStatement jjtn000 = new ASTDropTableStatement(JJTDROPTABLESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_DROP);
      jj_consume_token(K_TABLE);
      identifier();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void drop_index_stmt() throws ParseException {/*@bgen(jjtree) DropIndexStatement */
  ASTDropIndexStatement jjtn000 = new ASTDropIndexStatement(JJTDROPINDEXSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_DROP);
      jj_consume_token(K_INDEX);
      identifier();
      jj_consume_token(OPEN_PAR);
      column_name();
      jj_consume_token(CLOSE_PAR);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void release_stmt() throws ParseException {/*@bgen(jjtree) ReleaseStatement */
  ASTReleaseStatement jjtn000 = new ASTReleaseStatement(JJTRELEASESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_RELEASE);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_SAVEPOINT:{
        jj_consume_token(K_SAVEPOINT);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      identifier();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void savepoint_stmt() throws ParseException {/*@bgen(jjtree) SavepointStatement */
  ASTSavepointStatement jjtn000 = new ASTSavepointStatement(JJTSAVEPOINTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_SAVEPOINT);
      identifier();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void rollback_stmt() throws ParseException {/*@bgen(jjtree) RollbackStatement */
  ASTRollbackStatement jjtn000 = new ASTRollbackStatement(JJTROLLBACKSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_ROLLBACK);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_TRANSACTION:{
        jj_consume_token(K_TRANSACTION);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_TO:{
        jj_consume_token(K_TO);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case K_SAVEPOINT:{
          jj_consume_token(K_SAVEPOINT);
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        identifier();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void begin_stmt() throws ParseException {/*@bgen(jjtree) BeginStatement */
  ASTBeginStatement jjtn000 = new ASTBeginStatement(JJTBEGINSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_BEGIN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_TRANSACTION:{
        jj_consume_token(K_TRANSACTION);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void commit_stmt() throws ParseException {/*@bgen(jjtree) CommitStatement */
  ASTCommitStatement jjtn000 = new ASTCommitStatement(JJTCOMMITSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_COMMIT:{
        jj_consume_token(K_COMMIT);
        break;
        }
      case K_END:{
        jj_consume_token(K_END);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_TRANSACTION:{
        jj_consume_token(K_TRANSACTION);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        ;
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void insert_stmt() throws ParseException {/*@bgen(jjtree) InsertStatement */
  ASTInsertStatement jjtn000 = new ASTInsertStatement(JJTINSERTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_INSERT);
      jj_consume_token(K_INTO);
      identifier();
      jj_consume_token(K_VALUES);
      insert_values();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        insert_values();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void insert_values() throws ParseException {/*@bgen(jjtree) InsertValues */
  ASTInsertValues jjtn000 = new ASTInsertValues(JJTINSERTVALUES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(OPEN_PAR);
      literal();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        literal();
      }
      jj_consume_token(CLOSE_PAR);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  final public void update_stmt() throws ParseException {/*@bgen(jjtree) UpdateStatement */
  ASTUpdateStatement jjtn000 = new ASTUpdateStatement(JJTUPDATESTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_UPDATE);
      identifier();
      jj_consume_token(K_SET);
      column_name();
      jj_consume_token(EQ);
      expression();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case K_WHERE:{
        jj_consume_token(K_WHERE);
        expression();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}
